Fixed broken styles

--- a/ObjectExplorer.Blazor/Components/DictionaryExplorer.razor.css
+++ b/ObjectExplorer.Blazor/Components/DictionaryExplorer.razor.css
@@ -2,7 +2,7 @@
     background-color: color-mix(in lab, orangered 10%, white 100%) !important;
 }
 
-::deep div .object-explorer-badge-dictionary {
+::deep .object-explorer-badge-dictionary {
     color: orangered !important;
     outline: 2px solid orangered;
 }
